WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
243169
REGRESSION (
252540@main
): Lockdown Mode alert contains "localized string not found"
https://bugs.webkit.org/show_bug.cgi?id=243169
Summary
REGRESSION (252540@main): Lockdown Mode alert contains "localized string not ...
Aditya Keerthi
Reported
2022-07-25 10:02:58 PDT
rdar://97555448
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2022-07-25 10:05:56 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/2704
EWS
Comment 2
2022-07-25 11:42:16 PDT
Committed
252792@main
(5b2c23580d5c): <
https://commits.webkit.org/252792@main
> Reviewed commits have been landed. Closing PR #2704 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug