REGRESSION (252540@main): Lockdown Mode alert contains "localized string not found" https://bugs.webkit.org/show_bug.cgi?id=243169 rdar://97555448

Reviewed by Wenson Hsieh.

252540@main upstreamed Lockdown Mode code into open source, but incorrectly
omitted the localized string for the Lockdown Mode alert button.

* Source/WebCore/en.lproj/Localizable.strings:

Consolidate the "OK" alert button label into a single localizable string.

"OK (OK button title in extra zoomed number pad)" is kept as a separate string
since it receives different translations due to the compact nature of the UI.

* Source/WebKit/UIProcess/API/ios/WKWebViewIOS.mm:
(-[WKWebView _presentCaptivePortalMode]):
* Source/WebKit/UIProcess/ios/WKPasswordView.mm:
(-[WKPasswordView showPasswordFailureAlert]):

Canonical link: https://commits.webkit.org/252792@main